--- a/templates/main.html
+++ b/templates/main.html
@@ -9,16 +9,16 @@
 
   <body>
         <div class="header">
+            
             <button class="bouton_connection" onclick="location.href = 'http://127.0.0.1:5000/login'">Se connecter</button>
+            <button class="bouton_deconnection" onclick="location.href = 'http://127.0.0.1:5000/logout'">Se déconnecter</button>
             <h1>Films</h1>
         </div>
 
         <div class="films-container">
             {% for movie in best_movies %}
-            <div class="film-card">
-                <img src="{{ movie.full_poster_url }}" alt="{{ movie.title }}">
-                <h2>{{ movie.title }}</h2>
-            </div>
+                {% set film = movie %}
+                {% include 'components/movie_item.html' %}
             {% endfor %}
         </div>
   </body>
