Ajout de connexion et gestion de session

--- a/templates/components/nav_bar.html
+++ b/templates/components/nav_bar.html
@@ -17,8 +17,8 @@
     <!-- Droite : User / connexion -->
     <div class="nav-right">
 
-        {% if session.get('user') %}
-            <span class="nav-user">Bonjour {{ session.get('user')['username'] }}</span>
+        {% if session.get('logged') %}
+            <span class="nav-user">Bonjour {{ session.get('user_id') }}</span>
             <button onclick="location.href='/profile'">Profil</button>
             <button onclick="location.href='/logout'">Logout</button>
         {% else %}
