--- a/templates/components/nav_bar.html
+++ b/templates/components/nav_bar.html
@@ -2,7 +2,7 @@
 
     <!-- Gauche : Logo + Titre -->
     <div class="nav-left">
-        <img src="{{ url_for('static', filename='img/image-univ.png') }}" class="nav-logo" alt="logo" onclick="location.href='/main'">
+        <img src="{{ url_for('static', filename='img/image-univ.png') }}" class="nav-logo" alt="logo" onclick="location.href='/'">
         <h2 class="nav-title">Movie</h2>
     </div>
 
