--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Liste des films</title>
+      <title>Cinephile's Delight</title>
       <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
       <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
   </head>
