--- a/templates/main.html
+++ b/templates/main.html
@@ -17,5 +17,6 @@
                 {% include 'components/movie_item.html' %}
             {% endfor %}
         </div>
+  <script src="{{ url_for('static', filename= 'js/main.js') }}"></script>
   </body>
 </html>
