--- a/templates/base.html
+++ b/templates/base.html
@@ -12,5 +12,7 @@
     <div class="content">
         {% block content %}{% endblock %}
     </div>
+
+  <script src="{{ url_for('static', filename= 'js/main.js') }}"></script>
 </body>
 </html>
