--- a/templates/suggestions.html
+++ b/templates/suggestions.html
@@ -1,33 +1,27 @@
+{%extends "base.html" %}
+
+{% block title %}Suggestions{% endblock %}
+
 {% set best_score = (suggest_movies[0].score | float) if suggest_movies|length > 0 else 0 %}
 
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Suggestions</title>
-      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  </head>
+{% block content %}
 
-  <body>
-        {% include 'components/nav_bar.html' %}
+<h1>Suggestions</h1>
 
-        <h1>Suggestions</h1>
+<div class="films-container">
+    {% for movie in suggest_movies %}
+    <div class="movie-item">
+        {% set film = movie %}
+        {% include 'components/movie_item.html' %}
 
-        <div class="films-container">
-            {% for movie in suggest_movies %}
-            <div class="movie-item">
-                {% set film = movie %}
-                {% include 'components/movie_item.html' %}
+        {% set score = movie.score | float %}
+        {% set percent = (score / best_score * 100) if best_score > 0 else 0 %}
 
-                {% set score = movie.score | float %}
-                {% set percent = (score / best_score * 100) if best_score > 0 else 0 %}
-
-                <div class="movie-score" title="{{ score|round(2) }}">
-                    Score : {{ percent|round(1) }} %
-                </div>
-            </div>
-            {% endfor %}
+        <div class="movie-score" title="{{ score|round(2) }}">
+            Score : {{ percent|round(1) }} %
         </div>
-  </body>
-</html>
+    </div>
+    {% endfor %}
+</div>
+
+{% endblock %}
