--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,17 @@
         <form class="login-box" method="POST" action="/login">
             <h1>Connexion</h1>
 
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="error-message">
+                        {{ message }}
+                    </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+
+
             <div class="input-group">
                 <label for="pseudo">Pseudo :</label>
                 <input id="pseudo" name="pseudo" placeholder="Votre Pseudo" required>
@@ -20,7 +31,7 @@
 
             <div class="input-group">
                 <label for="password">Mot de passe :</label>
-                <input type="password" id="password" name="password" placeholder="Votre mot de passe">
+                <input type="password" id="password" name="password" placeholder="Votre mot de passe" required>
             </div>
 
             <button type="submit" class="btn">Se connecter</button>
