--- a/templates/suggestions.html
+++ b/templates/suggestions.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h1>Suggestions</h1>
+<h1>Recommendations</h1>
 
 <div class="films-container">
     {% for movie in suggest_movies %}
