--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -1,6 +1,6 @@
 {%extends "base.html" %}
 
-{% block title %}Favorite genres{% endblock %}
+{% block title %}Preferences - {{ pseudo }}{% endblock %}
 
 {% block content %}
 
