--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Profil - {{ pseudo }}</title>
+    <title>Ratings - {{ pseudo }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
