--- a/templates/components/nav_bar.html
+++ b/templates/components/nav_bar.html
@@ -19,7 +19,7 @@
 
         {% if session.get('logged') %}
             <span class="nav-user">Hello, {{ session.get('pseudo') }}</span>
-            <button onclick="location.href='/profile'">Profil</button>
+            <button onclick="location.href='/profile'">Ratings</button>
             <button onclick="location.href='/preferences'">Preferences</button>
             <button onclick="location.href='/suggestions'">Recommendations</button>
             <button onclick="location.href='/logout'">Logout</button>
