--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -106,7 +106,7 @@
         .then(data => {
             if (!data) return;
             if (data.success) {
-                showSuccessCheck()
+                showSuccessCheck();
             }
         })
         .catch(err => console.error(err));
