--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,12 +1,46 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Ratings - {{ pseudo }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-    {% include 'components/nav_bar.html' %}
+{%extends "base.html" %}
+
+{% block title %}Ratings - {{ pseudo }}{% endblock %}
+
+{% block content %}
+
+<style>
+/* ===== FOR CSV IMPORT DIALOG BOX ===== */
+.modal {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10000;
+}
+.modal.hidden {
+    display: none;
+}
+.modal-content {
+    background: white;
+    padding: 25px;
+    border-radius: 8px;
+    width: 420px;
+    max-width: 90%;
+}
+.modal-actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-top: 15px;
+}
+.hint {
+    font-size: 0.9em;
+    color: #555;
+}
+code {
+    background: #f3f3f3;
+    padding: 2px 4px;
+}
+</style>
+
 
 <button id="open-import-modal">Import from CSV</button>
 
@@ -33,7 +67,7 @@
         <p class="hint">
             Expected format: <code>imdb_id,rating</code>
             <br>
-            ⚠️ Ratings must be between 1 and 10.
+            ⚠️ Ratings must be between 1 and 10
         </p>
 
         <form id="import-form">
@@ -73,7 +107,7 @@
         .then(data => {
             if (data.success) {
                 modal.classList.add("hidden");
-                alert("Import completed ✅");
+                showSuccessCheck();
             } else {
                 alert("Error : " + data.error);
             }
@@ -82,63 +116,4 @@
     });
 </script>
 
-</body>
-</html>
-
-<style>
-/* ===== MOVIES GRID ===== */
-.movies-grid { 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    margin-top: 20px;
-}
-.movie-card {
-    background: #f4f4f4;
-    padding: 15px;
-    border-radius: 8px;
-    text-align: center;
-}
-.movie-card img {
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-    margin-bottom: 10px;
-}
-
-/* ===== FOR CSV IMPORT DIALOG BOX ===== */
-.modal {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 10000;
-}
-.modal.hidden {
-    display: none;
-}
-.modal-content {
-    background: white;
-    padding: 25px;
-    border-radius: 8px;
-    width: 420px;
-    max-width: 90%;
-}
-.modal-actions {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-    margin-top: 15px;
-}
-.hint {
-    font-size: 0.9em;
-    color: #555;
-}
-code {
-    background: #f3f3f3;
-    padding: 2px 4px;
-}
-
-</style>
+{% endblock %}
