--- a/templates/movie_details.html
+++ b/templates/movie_details.html
@@ -36,7 +36,7 @@
 
                 <button type="submit">Noter</button>
             </form>
-            <a href="/main">⬅ Retour</a>
+            <button onclick="location.href='/'">⬅ Retour</a>
         </div>
     </div>
 </div>
