--- a/templates/components/nav_bar.html
+++ b/templates/components/nav_bar.html
@@ -34,7 +34,7 @@
 .navbar {
     width: 100%;
     height: 65px;
-    background: blue;
+    background: #050303;
     color: white;
 
     display: flex;
@@ -84,14 +84,14 @@
 .nav-search button {
     padding: 8px 12px;
     border: none;
-    background: #007BFF;
+    background: #a042bc;
     color: white;
     border-radius: 0 6px 6px 0;
     cursor: pointer;
 }
 
 .nav-search button:hover {
-    background: #0056d4;
+    background: #712e84;
 }
 
 /* Partie droite */
@@ -105,13 +105,13 @@
     padding: 7px 14px;
     border-radius: 6px;
     border: none;
-    background: #007BFF;
+    background: #a042bc;
     color: white;
     cursor: pointer;
 }
 
 .nav-right button:hover {
-    background: #0056d4;
+    background: #712e84;
 }
 
 .nav-user {
