--- a/templates/login.html
+++ b/templates/login.html
@@ -48,7 +48,6 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
     display: flex;
@@ -58,7 +57,7 @@ body {
 }
 
 .login-box {
-    background-color: #fff;
+    background-color: #050303;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);
@@ -93,7 +92,7 @@ body {
 }
 
 .input-group input:focus {
-    border-color: #007BFF;
+    border-color: #a042bc;
 }
 
 /* Boutons */
@@ -101,13 +100,13 @@ body {
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #007BFF;
+    background-color: #a042bc;
     color: white;
     cursor: pointer;
     font-size: 16px;
 }
 
 .btn:hover {
-    background-color: #0056d4;
+    background-color: #712e84;
 }
 </style>
