--- a/templates/login.html
+++ b/templates/login.html
@@ -48,6 +48,7 @@
 <style>
 body {
     font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
     display: flex;
@@ -57,7 +58,7 @@ body {
 }
 
 .login-box {
-    background-color: #050303;
+    background-color: #fff;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);
@@ -92,7 +93,7 @@ body {
 }
 
 .input-group input:focus {
-    border-color: #a042bc;
+    border-color: #007BFF;
 }
 
 /* Boutons */
@@ -100,13 +101,13 @@ body {
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #a042bc;
+    background-color: #007BFF;
     color: white;
     cursor: pointer;
     font-size: 16px;
 }
 
 .btn:hover {
-    background-color: #712e84;
+    background-color: #0056d4;
 }
 </style>
