--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -16,7 +16,7 @@
         margin: 15px 0;
     }
     .genre-tag {
-        background: #ed1c24;
+        background: #eee;
         padding: 6px 10px;
         border-radius: 20px;
         display: flex;
