--- a/templates/register.html
+++ b/templates/register.html
@@ -45,7 +45,7 @@
 
     body {
     font-family: Arial, sans-serif;
-    background-color: #050303;
+    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
     display: flex;
@@ -83,7 +83,7 @@
 }
 
 .input-group input:focus {
-    border-color: #a042bc;
+    border-color: #007BFF;
 }
 
 /* Boutons */
@@ -91,14 +91,14 @@
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #a042bc;
+    background-color: #007BFF;
     color: white;
     cursor: pointer;
     font-size: 16px;
 }
 
 .btn:hover {
-    background-color: #712e84;
+    background-color: #0056d4;
 }
 
 /* Texte bas du formulaire */
@@ -108,7 +108,7 @@
 }
 
 .register a {
-    color: #a042bc;
+    color: #007BFF;
     text-decoration: none;
 }
 
