the last of fixes

--- a/templates/register.html
+++ b/templates/register.html
@@ -54,7 +54,7 @@
 }
 
 .register-box {
-    background-color: #fff;
+    background-color: #050303;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);
